修改代码生成JavaClassGeneratorUtils前的提交